<resources>
    <string name="app_name">My Products</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add</string>
    <string name="product_name">Product name *</string>
    <string name="name">Name*</string>
    <string name="type">Type*</string>
    <string name="price">Price*</string>
    <string name="tax">Tax*</string>
    <string name="add_product_image_optional">Add product image (optional)</string>
    <string name="no_product_found">No product found!!!</string>
    <string name="rupee">₹</string>
    <string name="add_product">Add Product</string>
    <string name="my_products">My Products</string>

    <string-array name="product_types">
        <item>General</item>
        <item>Grocery</item>
        <item>Home appliances</item>
        <item>Dairy</item>
        <item>Hardware</item>
        <item>Cloths</item>
        <item>Stationary</item>
        <item>Furniture</item>
        <item>Other</item>
    </string-array>

</resources>